Backport fix for PR c++/93753 from trunk.

gcc/cp/ChangeLog:
	Backport from trunk.
	2020-02-21  Martin Sebor  <msebor@redhat.com>

	PR c++/93753
	* class.c (check_flexarrays): Tighten up a test for potential members
	of anonymous structs or unions.

gcc/testsuite/ChangeLog:

	Backport from trunk.
	2020-02-21  Martin Sebor  <msebor@redhat.com>

	PR c++/93753
	* g++.dg/ext/flexary36.C: New test.